--- a/views/galery/index.ejs
+++ b/views/galery/index.ejs
@@ -38,6 +38,11 @@
 </head>
 <body>
     <header>
+        <nav>
+            <ul>
+                
+            </ul>
+        </nav>
         <div id="banner">
             <figure>
                 <img src="<%= banner %>" alt="Banner">
