--- a/views/user/settings.ejs
+++ b/views/user/settings.ejs
@@ -91,8 +91,8 @@
             <h3>About Me Text</h3>
             <hr>
             <form action="/update-text" method="post">
-                <textarea name="text" cols="30" rows="4" placeholder="About Me Text" required></textarea>
-                <button type="submit">Update About Me Text</button>
+                <textarea name="text" cols="30" rows="4" placeholder="About Me Text - [s], [u], [i], [b], [n/]" required></textarea>
+                <button type="submit">Update About Me</button>
             </form>
             <br>
 
